--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
@@ -38,7 +38,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>
                         {{ 'PAYLOAD-DECODER.ORGANIZATION' | translate }}</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.organization?.name }}
+                        {{ element.organizationName }}
                     </td>
                 </ng-container>
 
