--- a/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
+++ b/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-6">
         <div class="form-group">
-          <label class="form-label" for="metadata">{{'QUESTION.GIVE-PAYLOADDECODER-NAME' | translate}}</label>
+          <label class="form-label" for="metadata">{{'QUESTION.GIVE-PAYLOADDECODER-NAME' | translate}}*</label>
           <input class="form-control" type="text" id="name" name="name"
             [placeholder]="'QUESTION.GIVE-PAYLOADDECODER-NAME-PLACEHOLDER' | translate" maxlength="50" required
             [(ngModel)]="payloadDecoder.name"
