--- a/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-list/payload-decoder-table/payload-decoder-table.component.html
@@ -4,6 +4,9 @@
 </app-top-bar-table>
 <div class="jumbotron--table">
     <div class="mat-elevation-z8">
+        <div class="loading-shade" *ngIf="isLoadingResults">
+            <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+        </div>
         <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
             <!-- Name Column -->
             <ng-container matColumnDef="name">
