--- a/src/app/payload-decoder/payload-decoder-detail/iot-device-minimal-table/iot-device-minimal-table.component.html
+++ b/src/app/payload-decoder/payload-decoder-detail/iot-device-minimal-table/iot-device-minimal-table.component.html
@@ -36,6 +36,6 @@
         </table>
     </div>
 
-    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20]" [pageSize]="10" showFirstLastButtons>
+    <mat-paginator [length]="resultsLength" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" showFirstLastButtons>
     </mat-paginator>
 </div>
