--- a/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
+++ b/src/app/payload-decoder/payload-decoder-edit/payload-decoder-edit.component.html
@@ -110,7 +110,7 @@
         </div>
         <div (click)="testPayloadFunction()" class="btn btn-secondary my-3">
           <div class="d-flex mx-3">
-            <div class="mr-3">{{ "QUESTION.GIVE-PAYLOADDECODER-TESTBUTTON" | translate }}</div>
+            <div class="me-3">{{ "QUESTION.GIVE-PAYLOADDECODER-TESTBUTTON" | translate }}</div>
             <fa-icon [icon]="faExchangeAlt" class=""></fa-icon>
           </div>
         </div>
@@ -135,7 +135,7 @@
         <button (click)="routeBack()" class="btn btn-secondary" type="button">
           {{ "GEN.CANCEL" | translate }}
         </button>
-        <button class="btn btn-primary ml-2" type="submit">{{ "PAYLOAD-DECODER.SAVE" | translate }}</button>
+        <button class="btn btn-primary ms-2" type="submit">{{ "PAYLOAD-DECODER.SAVE" | translate }}</button>
       </div>
     </div>
   </div>
